--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.8
 homepage: https://github.com/rubbalpreetsingh/wikipedia
 
 environment:
-  sdk: '>=2.12.3 <3.0.0'
+  sdk: ">=2.15.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
